--- a/arch/arm/configs/ada_pi1_defconfig
+++ b/arch/arm/configs/ada_pi1_defconfig
@@ -31,7 +31,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_BROKEN_ON_SMP=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-# CONFIG_COMPILE_TEST is not set
+# CONFIG_COMPILE_TEST is not setf
 CONFIG_LOCALVERSION=""
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
@@ -1756,7 +1756,7 @@ CONFIG_TOUCHSCREEN_ADS7846=m
 # CONFIG_TOUCHSCREEN_HAMPSHIRE is not set
 # CONFIG_TOUCHSCREEN_EETI is not set
 CONFIG_TOUCHSCREEN_EGALAX=m
-CONFIG_TOUCHSCREEN_FT6X06=m
+CONFIG_TOUCHSCREEN_FT6X06=y
 # CONFIG_TOUCHSCREEN_FUJITSU is not set
 # CONFIG_TOUCHSCREEN_ILI210X is not set
 # CONFIG_TOUCHSCREEN_GUNZE is not set
